# balli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: bench_core.lpy
docs/: basilisp balli from malli.md  benchmarks.md  compatibility-evidence.md  contributing.md  deployment.md  examples.md  index.md  install.md  malli-comparison.md  malli-compatibility.md  malli-users-start-here.md  quick-start.md  releases.md  reviewer-outreach.md
docs/api/: balli_clj_kondo.md  balli_compile.md  balli_core.md  balli_describe.md  balli_destructure.md  balli_dev.md  balli_dot.md  balli_edn.md  balli_error.md  balli_experimental.md  balli_extension.md  balli_generator.md  balli_inspect.md  balli_integrations.md  balli_json_schema.md  balli_lite.md  balli_normalize.md  balli_openapi.md  balli_plantuml.md  balli_pretty.md  balli_provider.md  balli_regex.md  balli_sci.md  (+7 more)
examples/: config_validation.lpy  env_config_validation.lpy  json_api_handler.lpy  openapi_export.lpy  parity_tooling.lpy  query_params_validation.lpy  test_data_generation.lpy  web_request_validation.lpy
scripts/: compile_check.lpy  generate_api_docs.py  release_check.sh  test.sh  user_suite.sh
specs/: README.md
tests/: __init__.py  test_compatibility_corpus.lpy  test_core.lpy  test_default_branch.lpy  test_error.lpy  test_explain.lpy  test_function.lpy  test_fuzz_stress.lpy  test_generator.lpy  test_json_schema.lpy  test_local_registry.lpy  test_malli_parity.lpy  test_normalize.lpy  test_parity_extensions.lpy  test_parse.lpy  test_pred.lpy  test_provider.lpy  test_regex.lpy  test_registry.lpy  test_registry_mut.lpy  test_spell.lpy  test_tier4.lpy  test_tier5.lpy  test_time.lpy  test_toolchain.lpy  test_transform.lpy  test_user_suite.lpy  test_util.lpy
(+56 files in other folders)
