[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balli"
version = "0.2.0"
description = "Data-driven schemas for Basilisp - Malli-inspired."
requires-python = ">=3.10"
dependencies = [
  "basilisp>=0.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
balli = ["*.lpy"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
